[package]
name = "catppuccin-whiskers"
version = "2.0.0"
authors = ["backwardspy <backwardspy@pigeon.life>"]
edition = "2021"
description = "Soothing port creation tool for the high-spirited!"
readme = "README.md"
homepage = "https://github.com/catppuccin/toolbox/tree/main/whiskers"
repository = "https://github.com/catppuccin/toolbox"
license = "MIT"

[lib]
name = "whiskers"
path = "src/lib.rs"

[[bin]]
name = "whiskers"
path = "src/main.rs"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
missing_errors_doc = "allow"
implicit_hasher = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
catppuccin = { version = "2.1", features = ["serde", "css-colors"] }
clap = { version = "4.5", features = ["derive"] }
clap-stdin = "0.4.0"
css-colors = "1.0"
indexmap = { version = "2.2", features = ["serde"] }
itertools = "0.12"
lzma-rust = "0.1"
rmp-serde = "1.1"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.10.1"
tera = { version = "1.19", features = ["preserve_order"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
