[package]
name = "catppuccin-whiskers"
version = "2.1.0"
authors = ["backwardspy <backwardspy@pigeon.life>"]
edition = "2021"
description = "Soothing port creation tool for the high-spirited!"
readme = "README.md"
homepage = "https://github.com/catppuccin/toolbox/tree/main/whiskers"
repository = "https://github.com/catppuccin/toolbox"
license = "MIT"

[lib]
name = "whiskers"
path = "src/lib.rs"

[[bin]]
name = "whiskers"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/whiskers-v{ version }/whiskers-{ target }{ archive-suffix }"
pkg-fmt = "bin"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
missing_errors_doc = "allow"
implicit_hasher = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.1"
catppuccin = { version = "2.2", features = ["serde", "css-colors"] }
clap = { version = "4.5.4", features = ["derive"] }
clap-stdin = "0.4"
css-colors = "1.0"
encoding_rs_io = "0.1.7"
indexmap = { version = "2.2", features = ["serde"] }
itertools = "0.12"
lzma-rust = "0.1"
rmp-serde = "1.3.0"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.10"
tera = { version = "1.19", features = ["preserve_order"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1"
