[tool.poetry]
name = "catppuccin_catwalk"
version = "0.2.0"
description = "Part of catppuccin/toolbox, to generate preview a single composite screenshot for the four flavours"
authors = ["Catppuccin Org <core@catppuccin.com>"]
license = "MIT"
repository = "https://github.com/catppuccin/toolbox"
packages = [
	{ include = "catwalk" }
]

[tool.poetry.scripts]
catwalk = "catwalk:cli"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = { version = "^9.2.0", markers = "platform_machine != 'x86_64'"}
Pillow-SIMD = { version = "^9.0.0", markers = "platform_machine == 'x86_64'"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
