[package]
name = "catwalk"
description = "A sweet program that takes in four showcase images and displays them all at once."
authors = ["Catppuccin Org <releases@catppuccin.com>"]
repository = "https://github.com/catppuccin/toolbox"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0.44"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = { version = "4.3.2" }
color-eyre = { version = "0.6.2", default-features = false }
ril = { version = "0", default-features = false, features = ["resize", "webp"] }

[target.'cfg(target_family = "wasm")'.dependencies]
ril = { version = "0", default-features = false, features = ["resize"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["ImageData"] }
wee_alloc = "0.4.5"

[build-dependencies]
clap = { version = "*", features = ["derive"] }
clap_complete = "*"
