[package]
name = "catppuccin-catwalk"
description = "A sweet program that takes in four showcase images and displays them all at once."
authors = ["Catppuccin Org <releases@catppuccin.com>"]
repository = "https://github.com/catppuccin/toolbox"
license = "MIT"
version = "1.2.0"
edition = "2021"

[[bin]]
name = "catwalk"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/catwalk-v{ version }/catwalk-{ target }{ archive-suffix }"
pkg-fmt = "bin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1"

[dependencies.ril]
git = "https://github.com/nekowinston/ril"
branch = "feat/image_webp"
default-features = false
features = ["png", "resize", "webp-pure"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4" }
color-eyre = { version = "0.6", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["ImageData"] }
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']
