[package]
name = "puccinier"
version = "0.1.2"
edition = "2021"
readme = "README.md"
authors = ["ap-1 <anishp0828@gmail.com>"]
license = "MIT"
repository = "https://github.com/catppuccin/toolbox"
homepage = "https://github.com/catppuccin/toolbox/tree/main/puccinier"
description = "Generate the other Catppuccin flavours off a template file written in one of them"
categories = ["command-line-utilities", "template-engine"]

[dependencies]
xflags = "0.3"
regex = "1.6"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
