[package]
name = "puccinier"
version = "1.0.3"
edition = "2021"
readme = "README.md"
authors = ["ap-1 <anishp0828@gmail.com>"]
license = "MIT"
repository = "https://github.com/catppuccin/toolbox"
homepage = "https://github.com/catppuccin/toolbox/tree/main/puccinier"
description = "Generate the other Catppuccin flavours off a template file written in one of them"
categories = ["command-line-utilities", "template-engine"]

[dependencies]
xflags = "0.3"
regex = { version = "1.6", default-features = false, features = ["std"] }
atty = "0.2"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
