[package]
name = "catppuccin-whiskers"
version = "1.1.4"
authors = ["backwardspy <backwardspy@pigeon.life>"]
edition = "2021"
description = "Soothing port creation tool for the high-spirited!"
readme = "README.md"
homepage = "https://github.com/catppuccin/toolbox/tree/main/whiskers"
repository = "https://github.com/catppuccin/toolbox"
license = "MIT"

[[bin]]
name = "whiskers"
path = "src/main.rs"

[dependencies]
base64 = "0.21"
catppuccin = { version = "1.3", features = ["css"] }
indexmap = { version = "2.2.3", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
clap-stdin = "0.3.0"
color-eyre = { version = "0.6", default-features = false }
css-colors = "1.0"
handlebars = "4.5"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
tempfile = "3.8"
thiserror = "1.0"
titlecase = "2.2"
json-patch = "1.2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0.4"